# lobsim

./: .gitignore  CMakeLists.txt  README.md  cmakeWrapper.sh  detect_deps.sh
examples/: runMarketSimulator.cpp
include/core/: MarketFeeder.h  Order.h
include/engine/: OrderBookEngine.h  OrderBookSide.h
include/engine/events/: EventBus.h  Events.h  IEventListener.h
include/engine/listeners/: MarketDataPublisher.h  OrderBookView.h  StatsCollector.h  TradeInfo.h
include/engine/match/: DefaultMatchingStrategy.h  FillOp.h  IMatchingStrategy.h  MatchPrinter.h  MatchResult.h  PriceTimePriorityStrategy.h
include/engine/side/: IOrderBookSideView.h  OrderBookSide.h  PriceLevelView.h
include/engine/views/: Dashboard.h  IView.h  OrderBookViewRenderer.h  StatsViewRenderer.h  TradesViewRenderer.h
include/simulator/: MarketSimulator.h
include/utils/: Comparator.h  ConsoleColors.h  GeneralUtils.h  OrderRenderer.h  OrderTracker.h  StringUtils.h
include/utils/data_structures/: SimpleMpscRingBuffer.h  ThreadSafeQueue.h  spsc.h
include/utils/log/: ConsoleColors.h  DebugLog.h  Logger.h  Printer.h  StreamUtils.h
include/utils/random/: IRNG.h  MockRNG.h  RealRNG.h
src/core/: MarketFeeder.cpp
src/engine/: OrderBookEngine.cpp  OrderBookSide.cpp
src/engine/events/: EventBus.cpp
src/engine/listeners/: MarketDataPublisher.cpp  OrderBookView.cpp  StatsCollector.cpp
src/engine/match/: DefaultMatchingStrategy.cpp  MatchPrinter.cpp  PriceTimePriorityStrategy.cpp
src/engine/side/: OrderBookSide.cpp
src/simulator/: MarketSimulator.cpp
src/utils/: OrderRenderer.cpp  OrderTracker.cpp
src/utils/log/: Logger.cpp  Printer.cpp
src/utils/random/: MockRNG.cpp  RealRNG.cpp
test/core/: MarketFeeder_test.cpp  Order_test.cpp
test/engine/: OrderBookEngine_test.cpp  OrderBookSide_test.cpp
test/engine/match/: DefaultMatchingStrategy_test.cpp  PriceTimePriorityStrategy_test.cpp
test/test_utils/: CheckHelpers.h  MockRNGHelpers.h  OrderFactory.h
test/utils/data_structures/: ThreadSafeQueue_test.cpp
test/utils/random/: MockRNG_test.cpp  RealRNG_test.cpp
